--- a/Let's Park/Let's Park/www/templates/tab-account.html
+++ b/Let's Park/Let's Park/www/templates/tab-account.html
@@ -4,6 +4,15 @@
     <ion-toggle  ng-model="settings.enableFriends">
         Enable Friends
     </ion-toggle>
+        <li class="item item-divider">
+            Spotter Users:
+        </li>
+        <div class="card" ng-show="settings.enableFriends" ng-repeat="user in users">
+            <div class="item item-divider" ng-bind="user.first_name + ' ' + user.last_name">
+            </div>
+            <div class="item item-text-wrap" ng-bind="user.email_address">
+            </div>
+        </div>
     </ion-list>
   </ion-content>
 </ion-view>
