--- a/Let's Park/Let's Park/www/templates/tab-map.html
+++ b/Let's Park/Let's Park/www/templates/tab-map.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Map">
   <ion-content>
+      <input id="pac-input" class="controls" type="text" placeholder="Search Box">
       <div id="map" data-tap-disabled="true"></div>
   </ion-content>
 </ion-view>
