Added Profile and All Spots tab and added Remember Me option to login

--- a/Let's Park/Let's Park/www/templates/login.html
+++ b/Let's Park/Let's Park/www/templates/login.html
@@ -13,5 +13,8 @@
                 Login
             </button>
         </div>
+        <div style="text-align:center">
+            <ion-checkbox class="item-borderless" style="display:inline-block;text-align:center" ng-model="remember.me">Remember me</ion-checkbox>
+        </div>
     </ion-content>
 </ion-view>
