--- a/Let's Park/Let's Park/www/templates/tabs.html
+++ b/Let's Park/Let's Park/www/templates/tabs.html
@@ -5,20 +5,30 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-bottom tabs-color-active-positive">
 
-  <!-- Map Tab -->
-  <ion-tab title="Map" icon-off="ion-map" icon-on="ion-map" href="#/tab/map">
-    <ion-nav-view name="tab-map"></ion-nav-view>
-  </ion-tab>
+    <!-- Profile Tab -->
+    <ion-tab title="Profile" icon-off="ion-person" icon-on="ion-person" href="#/tab/profile">
+        <ion-nav-view name="tab-profile"></ion-nav-view>
+    </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab>
+    <!-- Spots List Tab -->
+    <ion-tab title="Spots" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/spots">
+        <ion-nav-view name="tab-spots"></ion-nav-view>
+    </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
+    <!-- Map Tab -->
+    <ion-tab title="Map" icon-off="ion-map" icon-on="ion-map" href="#/tab/map">
+        <ion-nav-view name="tab-map"></ion-nav-view>
+    </ion-tab>
+
+    <!-- Chats Tab -->
+    <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
+        <ion-nav-view name="tab-chats"></ion-nav-view>
+    </ion-tab>
+
+    <!-- Account Tab -->
+    <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
+        <ion-nav-view name="tab-account"></ion-nav-view>
+    </ion-tab>
 
 
 </ion-tabs>
