Made changes to $http methods to accomodate server and database changes

--- a/Let's Park/Let's Park/www/templates/login.html
+++ b/Let's Park/Let's Park/www/templates/login.html
@@ -2,7 +2,7 @@
     <ion-content>
         <ion-list>
             <label class="item item-input">
-                <input type="email" autocorrect="off" autocapitalize="none" placeholder="Email Address" ng-model="userInfo.email_address">
+                <input type="text" autocorrect="off" autocapitalize="none" placeholder="User Name" ng-model="userInfo.user_name">
             </label>
             <label class="item item-input">
                 <input type="password" placeholder="Password" ng-model="userInfo.password">
