--- a/Let's Park/Let's Park/www/templates/tab-account.html
+++ b/Let's Park/Let's Park/www/templates/tab-account.html
@@ -13,7 +13,7 @@
                 <div class="card" ng-repeat="user in users">
                     <div class="item item-divider" ng-bind="user.first_name + ' ' + user.last_name">
                     </div>
-                    <div class="item item-text-wrap" ng-bind="user.email_address">
+                    <div class="item item-text-wrap" ng-bind="user.user_name">
                     </div>
                 </div>
             </div>
